--- a/src/style.css
+++ b/src/style.css
@@ -1,35 +1,103 @@
-body {
-    font-family:Arial, Helvetica, sans-serif;
-    font-size:14px;
-    }
-         
-label {
-    font-weight:bold;
-    width:100px;
-	font-size:14px;
-    }
-         
-.box {
-    border:#666666 solid 1px;
-    }
-
-.div1 {
-	width:300px;
-	border: solid 1px #333333;
-	text-align:left;
-	}
-	
-.div2 {
-	background-color:#333333;
-	color:#FFFFFF;
-	padding:3px;
-	}
-	
-.div3{
-	margin:30px;
-	}
+/*Login*/
 	
 a.passchange{
 	text-decoration:none;
-	margin-right:45px;
 	}
+
+/*Home*/
+
+table.home_table{
+	width:47%;
+}
+
+h4{
+	font-family:'calibri','arial';
+	font-size: 22px;
+	font-style:italic;
+}
+
+/*Add Category*/
+
+table.add_ctg_table{
+	border:none;
+	width:70%;
+    border-collapse:separate;
+    border-spacing:0 12px;
+	text-align:right;
+}
+
+.add_ctg{
+    width: 550px;
+    padding: 20px;
+    border: 1px solid #dcd9d9;
+    margin: 10px;
+}
+
+.add_ctg_heading{
+	padding:5px;
+	background-color: #efefee;
+	font: italic bold 24px Georgia, serif;
+	text-shadow: 2px 2px 4px #aeaeae ;
+}
+/*Header*/
+table.header {
+    background-color:#337ab5;
+    color:white;
+    text-align:center;
+	width:100%;
+}
+
+img.logo{
+	height:120px;
+}
+
+
+/*Footer*/
+footer {
+	position:fixed;
+   left:0px;
+   bottom:0px;
+   width:100%;
+   background-color:#337ab5;
+   color:white;
+   clear:both;
+   text-align:center;
+   padding:19px;
+}
+
+footer.relation {
+	position:relative;
+	top:40px;
+   bottom:0px;
+   width:100%;
+   background-color:#337ab5;
+   color:white;
+   text-align:center;
+   padding:19px;
+}
+/*Stock*/
+
+table.table-striped{
+	width:50%;
+	text-align:center;
+}
+
+table.table-striped th{
+	text-align:center;
+	border-bottom:1pt solid #e1e1df ;
+	padding:8px;
+	background-color:#efefee ;
+}
+
+table.table-striped td {
+  border-bottom:1pt solid #e1e1df ;
+  padding:8px;
+}
+
+/*Reports*/
+table.reports{
+	margin-top:20px;
+	width:40%;
+	border-collapse:separate;
+    border-spacing:0 12px;
+}
